--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 //    https://github.com/Shashank02051997/FancyToast-Android
     implementation 'io.github.shashank02051997:FancyToast:2.0.1'
+//    https://github.com/andanhm/QuantityPicker
+    implementation 'com.andanhm.quantitypicker:quantitypicker:1.1.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
