--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
 
 //    https://github.com/Shashank02051997/FancyToast-Android
     implementation 'io.github.shashank02051997:FancyToast:2.0.1'
-//    https://github.com/andanhm/QuantityPicker
-    implementation 'com.andanhm.quantitypicker:quantitypicker:1.1.0'
 //    https://github.com/Shashank02051997/FancyGifDialog-Android
     implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.4'
-
+//    https://github.com/koral--/android-gif-drawable
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
+//    https://github.com/kojofosu/Quantitizer
+    implementation 'com.github.kojofosu:Quantitizer:v1.6.7'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
